# codelm

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
docs/superpowers/plans/: 2026-06-24-feynman-code-tour-handoff.md  2026-06-25-p0-tauri-graph-foundation.md
docs/superpowers/specs/: 2026-06-24-feynman-code-tour-design.md
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  commands.rs  config.rs  graph.rs  lib.rs  main.rs  progress.rs  settings.rs  source.rs  truth.rs
src-tauri/tests/: ai_feedback.rs  generalize_feedback.rs  progress_store.rs  settings_store.rs  source_security.rs  truth_context.rs
src/app/: App.tsx  config.ts  designState.test.ts  designState.ts  graphData.test.ts  graphData.ts  routeMap.test.ts  routeMap.ts  settings.test.ts  settings.ts  source.test.ts  source.ts
src/feynman/: ai.ts  alignment.test.ts  alignment.ts  feedback.test.ts  feedback.ts  truth.test.ts  truth.ts
src/generalize/: ai.ts  coverage.test.ts  coverage.ts  feedback.test.ts  feedback.ts
src/progress/: persistence.test.ts  persistence.ts  progress.test.ts  progress.ts
