[package]
name = "code-reading"
version = "0.1.0"
description = "Feynman-style local code reading tour"
authors = ["code-reading"]
edition = "2021"

[lib]
name = "code_reading_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
